--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "babel-preset-react": "^6.22.0",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "file-loader": "^0.10.0",
+    "html-loader": "^0.4.4",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.16.1"
