--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-html5video": "^1.4.0",
     "react-router": "^3.0.2",
     "redux": "^3.6.0"
   }
