--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
   },
   "dependencies": {
     "react": "^15.4.2",
+    "react-boostrap-carousel": "^2.0.4",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-html5video": "^1.4.0",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0"
+    "react-slick": "^0.14.5",
+    "redux": "^3.6.0",
+    "slick-carousel": "^1.6.0"
   }
 }
