--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "react-html5video": "^1.4.0",
     "react-router": "^3.0.2",
+    "react-router-transition": "0.0.6",
     "redux": "^3.6.0"
   }
 }
