--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.22.0"
+  },
+  "dependencies": {
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.16.1"
-  },
-  "dependencies": {
+    "webpack-hot-middleware": "^2.16.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "react": "^15.4.2",
