--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0"
-  },
-  "dependencies": {
+    "babel-preset-react": "^6.22.0",
     "file-loader": "^0.10.0",
     "html-loader": "^0.4.4",
     "url-loader": "^0.5.7",
